WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219412
[macCatalyst] Embedded YouTube videos fail to play
https://bugs.webkit.org/show_bug.cgi?id=219412
Summary
[macCatalyst] Embedded YouTube videos fail to play
Per Arne Vollan
Reported
2020-12-01 15:53:23 PST
Embedded YouTube videos fail to play on macCatalyst.
Attachments
Patch
(1.70 KB, patch)
2020-12-01 16:00 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(2.09 KB, patch)
2020-12-01 16:03 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2020-12-01 15:53:48 PST
<
rdar://problem/71869657
>
Per Arne Vollan
Comment 2
2020-12-01 16:00:06 PST
Created
attachment 415172
[details]
Patch
Per Arne Vollan
Comment 3
2020-12-01 16:03:15 PST
Created
attachment 415174
[details]
Patch
EWS
Comment 4
2020-12-01 16:41:07 PST
Committed
r270330
: <
https://trac.webkit.org/changeset/270330
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 415174
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug