[macCatalyst] Embedded YouTube videos fail to play https://bugs.webkit.org/show_bug.cgi?id=219412 <rdar://problem/71869657>

Reviewed by Tim Horton.

Add a missing comma in list of Media services, for which sandbox extensions are created. The missing comma
is causing a sandbox violation, since strings are concatenated when there's no comma.

* UIProcess/WebPageProxy.cpp:
(WebKit::mediaRelatedMachServices):


Canonical link: https://commits.webkit.org/232024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270330 268f45cc-cd09-0410-ab3c-d52691b4dbfc